<?xml version="1.0" encoding="utf-8"?>

<org.dandelion.radiot.home_screen.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/titlebar_shadow">
    <Button android:id="@+id/home_btn_main_show"
            android:text="@string/main_show_title"
            android:drawableTop="@drawable/home_btn_main_show"
            style="@style/DashboardButton"/>
    <Button android:id="@+id/home_btn_after_show"
            android:text="@string/after_show_title"
            android:drawableTop="@drawable/home_btn_after_show"
            style="@style/DashboardButton"/>
    <Button android:id="@+id/home_btn_live_show"
            android:text="@string/live_show_title"
            android:drawableTop="@drawable/home_btn_live"
            style="@style/DashboardButton"/>
    <Button android:id="@+id/home_btn_about"
            android:text="@string/about_app_title"
            android:drawableTop="@drawable/home_btn_about"
            style="@style/DashboardButton"/>
</org.dandelion.radiot.home_screen.DashboardLayout>