<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ImageView
		android:id="@+id/about_app_icon"
		android:src="@drawable/ic_title_about"
		style="@style/ActivityIcon"
		android:paddingLeft="2dp" />
	<TextView
		android:id="@+id/about_app_title"
		style="@style/ActivityTitle"
		android:text="@string/about_app_title"
		android:layout_alignTop="@id/about_app_icon"
		android:layout_alignBottom="@id/about_app_icon" />
	<View
		style="@style/Divider"
		android:layout_below="@id/about_app_title" />
	<RelativeLayout
		android:id="@+id/app_info"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true">
		<FrameLayout
			android:id="@+id/logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="15dp"
			android:layout_centerHorizontal="true">
			<include
				layout="@layout/app_logo" />
		</FrameLayout>
		<TextView
			android:id="@+id/version_label"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="@android:style/TextAppearance.Medium"
			android:layout_below="@id/logo"
			android:layout_marginTop="12dp"
			android:gravity="center_horizontal" />
		<TextView
			android:id="@+id/acknoledgements"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/version_label"
			android:layout_marginTop="12dp"
			android:textAppearance="@android:style/TextAppearance.Small"
			android:gravity="center_horizontal"
			android:paddingTop="10dp"
			android:paddingLeft="10dp"
			android:paddingRight="10dp"
			android:text="@string/acknoledgements" />
	</RelativeLayout>
	<Button
		android:id="@+id/feedback_button"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:text="@string/feedback_label"
		android:layout_alignParentBottom="true"
		android:onClick="sendFeedback" />
</RelativeLayout>