<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
    <View
            android:id="@+id/download_unsupported_center"
            android:layout_centerInParent="true"
            android:layout_height="1px"
            android:layout_width="1px"
            />
    <TextView
            android:id="@+id/download_unsupported_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/download_unsupported_title"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_above="@id/download_unsupported_center"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>
    <ImageView
            android:id="@+id/gingerbread_icon"
            android:src="@drawable/gingerdroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="25dp"
            android:layout_above="@id/download_unsupported_title"/>
    <TextView
            android:id="@+id/download_unsupported_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_unsupported_message"
            android:gravity="center"
            android:paddingTop="20dp"
            android:layout_below="@id/download_unsupported_center"
            android:textAppearance="@android:style/TextAppearance.Small"/>
    <View style="@style/Divider"
          android:layout_above="@+id/feedback_button"/>
    <Button
            android:id="@+id/feedback_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback_label"
            android:layout_alignParentBottom="true"
            android:onClick="sendFeedback" />
</RelativeLayout>